# cloud-pak-operations-cli

./: .gitignore  Dockerfile  Gemfile  Jenkinsfile  MANIFEST.in  README.md  _config.yml  coding_guidelines.md  development_guide.md  index.markdown  installation.md  known_issues.md  pyproject.toml  setup.cfg  setup.py  usage.md  usage_adm.md  usage_adm_ibm-internal-plugin.md  usage_cluster.md  usage_cluster_pods.md  usage_cluster_pull-secret.md  usage_cluster_storage.md  usage_ibmcloud.md  usage_ibmcloud_oc_cluster.md  usage_operator.md
.github/workflows/: codeql-analysis.yml  docker-push.yml  pypi-branch.yml  pypi-master.yml  python-package.yml
cpo/: __init__.py  cpo.py
cpo/commands/adm/: __init__.py  download_dependencies.py  get-shell-completion-script-location.py  get_shell_completion_script_location.py  set_config_option.py  store_credentials.py  update_dev.py
cpo/commands/cluster/: __init__.py  add.py  current.py  delete_terminated_pods.py  edit.py  get_cluster_access_token.py  install_nfs_storage_class.py  install_odf_storage_classes.py  login.py  ls.py  oc_login.py  replace_component_images.py  replace_data_gate_images.py  reset_current_cluster.py  rm.py  use.py
cpo/commands/cpd3/: install.py  install_assembly.py
cpo/commands/cpd4/: __init__.py  install.py  install_foundational_services.py  uninstall.py  uninstall_foundational_services.py
cpo/commands/fyre/: __init__.py  login.py  logout.py
cpo/commands/ibmcloud/: __init__.py  create_iam_token.py  generate_api_key.py  login.py  logout.py  regenerate_api_key.py
cpo/config/: __init__.py  binaries_manager.py  cluster_credentials_manager.py  configuration_manager.py
cpo/lib/: error.py  jmespath.py
cpo/lib/ansible/: openshift_playbook_runner.py  playbook_runner.py
cpo/lib/click/: cpd_service_spec_param_type.py  lazy_loading_multi_command.py  package_directory_details.py  utils.py
cpo/lib/cloud_pak_for_data/: cpd3_manager.py  cpd3_manager_factory.py
cpo/lib/cluster/: __init__.py  cluster.py  cluster_factory.py
cpo/lib/dependency_manager/: __init__.py  dependency_manager.py  dependency_manager_binary_plugin.py  dependency_manager_plugin.py
cpo/lib/dev_plugin/: install.py  list.py
cpo/lib/fyre/: ocp_plus_api_manager.py
cpo/lib/ibm_internal_plugin/: __init__.py  ibm_internal_plugin_manager.py  install.py  list.py
cpo/lib/ibmcloud/: __init__.py  iam.py  ibm_cloud_api_manager.py  install.py  login.py  openshift.py  plugin_manager.py  status.py  target.py  vlan_manager.py  volume.py
cpo/lib/openshift/: oc.py  openshift_api_manager.py
cpo/lib/plugin_manager/: distribution_entry_point_loader.py  package_data.py  plugin_manager.py
cpo/scripts/: get_current_cluster_alias.py
cpo/utils/: compression.py  debugger.py  download.py  error.py  file.py  http_method.py  importlib.py  logging.py  network.py  operating_system.py  path.py  process.py  ssh.py  string.py  wait.py
dg/: __init__.py  dg.py
dg/commands/: __init__.py
dg/commands/adm/: __init__.py  download_dependencies.py  get-shell-completion-script-location.py  store_credentials.py  update.py  update_dev.py
dg/commands/cluster/: __init__.py  current.py  edit.py  get_cluster_access_token.py  install_assembly.py  install_cloud_pak_for_data.py  install_data_gate.py  install_db2.py  install_db2_data_gate.py  install_db2_data_gate_stack.py  install_nfs_storage_class.py  login.py  ls.py  replace_component.py  replace_component_images.py  rm.py  use.py
dg/commands/cpd3/: __init__.py  install_assembly.py  install_cloud_pak_for_data.py  install_db2.py  install_db2_data_gate.py  install_db2_data_gate_stack.py
dg/commands/cpd4/: __init__.py  install.py  install_foundational_services.py  uninstall.py  uninstall_foundational_services.py
dg/commands/fyre/: __init__.py  login.py  logout.py
dg/commands/ibmcloud/: __init__.py  common.py  generate_api_key.py  login.py  logout.py
dg/config/: __init__.py  binaries_manager.py  cluster_credentials_manager.py  data_gate_configuration_manager.py
dg/lib/: click.py  error.py  jmespath.py  openshift.py  thirdparty.py
dg/lib/click/: cpd_service_spec_param_type.py  lazy_loading_multi_command.py  utils.py
dg/lib/cloud_pak_for_data/: cpd3_manager.py  cpd3_manager_factory.py  cpd_manager.py  cpd_manager_factory.py
dg/lib/cluster/: __init__.py  cluster.py  cluster_factory.py
dg/lib/dependency_manager/: __init__.py  dependency_manager.py  dependency_manager_plugin.py
dg/lib/download_manager/: __init__.py  download_manager.py  download_manager_plugin.py
dg/lib/fyre/: api_manager.py  network.py  nfs.py  ocp_plus_api_manager.py  openshift.py
dg/lib/ibmcloud/: __init__.py  iam.py  install.py  login.py  oc.py  openshift.py  plugin.py  plugin_manager.py  status.py  target.py  vlan.py  vlan_manager.py  volume.py
dg/lib/openshift/: oc.py  openshift_api_manager.py
dg/lib/plugin_manager/: package_data.py  plugin_manager.py
dg/utils/: click.py  compression.py  debugger.py  download.py  file.py  http_method.py  importlib.py  logging.py  network.py  openshift.py  process.py  ssh.py  string.py  wait.py
dg/utils/download/: __init__.py  ibm_cloud.py  (+2 more)
docs/: coding_guidelines.md  development_guide.md  installing_ibm_cloud_pak_for_data_on_a_fyre-based_openshift_cluster.md
plugins/cloud-pak-operations-cli-db2-data-gate/: README.md  pyproject.toml  setup.cfg
plugins/cloud-pak-operations-cli-db2-data-gate/cluster/: replace_db2_data_gate_images.py
plugins/cloud-pak-operations-cli-db2-data-gate/cpd3/: __init__.py  install_db2.py  install_db2_data_gate.py  install_db2_data_gate_stack.py
plugins/cloud-pak-operations-cli-db2-data-gate/cpd4/: __init__.py  install_db2_data_gate_stack.py
plugins/cloud-pak-operations-cli-db2-data-gate/fyre/: __init__.py  init_node_for_db2_data_gate.py
plugins/lib/: __init__.py
scripts/: scripts.py
test/: test_version.py
test_fyre/: test.sh  test_fyre_commands.py
test_with_network/commands/: test_download_dependencies.py
tests/test/: test_version.py
tests/test_fyre/: test.sh  test_fyre_commands.py
tests/test_scripts/: test_scripts.py
typings/: semver.pyi
(+473 files in other folders)
