[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools-git-versioning", "setuptools>=61", "wheel"]

[project]
authors = [{ email = "db2datagate@ibm.com", name = "IBM Corporation" }]
classifiers = [
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3.10"
]
dependencies = [
	"ansible",
	"ansible_runner",
	"asyncssh",
	"click",
	"click-option-group",
	"colorama",
	"halo",
	"jmespath",
	"jsonschema",
	"kubernetes >= 12",
	"netifaces",
	"pypi_simple",
	"pytest",
	"pyyaml",
	"q",
	"requests",
	"semver",
	"tabulate",
	"tqdm",
	"urllib3"
]
description = "IBM Cloud Pak Operations CLI"
dynamic = ["version"]
name = "cloud-pak-operations-cli"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
cpo = "cpo.cpo:cli"
cpo-get-current-cluster-alias = "cpo.scripts.get_current_cluster_alias:get_current_cluster_alias"

[project.urls]
repository = "https://github.com/IBM/cloud-pak-operations-cli"

[tool.pytest.ini_options]
filterwarnings = [
	# https://setuptools.pypa.io/en/latest/history.html#v67-3-2
	"ignore::DeprecationWarning",
]

[tool.setuptools-git-versioning]
enabled = true
