[flake8]
max-line-length = 120

[metadata]
name = cloud-pak-operations-cli
url = https://github.com/IBM/cloud-pak-operations-cli
download_url = https://github.com/IBM/cloud-pak-operations-cli
author = IBM Corporation
author_email = db2datagate@ibm.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

description = IBM Cloud Pak Operations CLI
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    asyncssh
    click
    click-option-group
    colorama
    halo
    jmespath
    jsonschema
    kubernetes >= 12
    netifaces
    pyyaml
    requests
    semver
    tabulate
    tqdm
    urllib3

python_requires = >=3.8
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    cpo = cpo.cpo:cli
