[flake8]
max-line-length = 120

[metadata]
name = cloud-pak-operations-cli-db2-data-gate
author = IBM Corporation
author_email = db2datagate@ibm.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

description = IBM Cloud Pak Operations CLI Db2 Data Gate Plug-in
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    cloud-pak-operations-cli

python_requires = >=3.8
include_package_data = True
packages = find:

[options.entry_points]
cloud_pak_operations_cli_plugins =
    entry_point_1 = cpd3
    entry_point_2 = cpd4
    entry_point_3 = fyre
